<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tabs.tabsActivity.MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvUpper"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:elevation="12dp"
        app:cardCornerRadius="13dp"
        app:cardElevation="20dp"
        app:cardUseCompatPadding="false">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/tvHeader"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/header_txt"
                android:textSize="@dimen/header" />

            <TextView
                android:id="@+id/tvBodytxt"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvHeader"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="48dp"
                android:text="@string/your_ride_is" />

            <TextView
                android:id="@+id/tvAmount"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvBodytxt"
                android:layout_centerHorizontal="true"
                android:text="@string/amount_txt"
                android:textSize="42sp" />

            <TextView
                android:id="@+id/tvDate"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAmount"
                android:layout_marginStart="80dp"

                android:text="March 21,2020 " />

            <TextView
                android:id="@+id/tvTime"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAmount"
                android:layout_centerHorizontal="true"
                android:layout_toEndOf="@id/tvDate"
                tools:text="at 10:30 AM" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cvUpper">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:elevation="12dp"
            app:cardCornerRadius="13dp"
            app:cardElevation="20dp"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_profile"
                    app:civ_border_color="@color/black"
                    app:civ_border_width="3dp" />

                <TextView
                    android:id="@+id/tvName"
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgProfile"
                    android:layout_centerHorizontal="true"

                    android:text="@string/name"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvRate"
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvName"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:text="@string/rate_txt"/>
                <RatingBar
                    android:id="@+id/rbRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/tvRate"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edtMessage"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_below="@id/rbRating"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:padding="6dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:hint="Your message"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text|textMultiLine|textCapSentences"
                        android:isScrollContainer="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edtMessage"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:padding="12dp"
                    android:text="Done"
                    app:cornerRadius="20dp" />

                


            </RelativeLayout>


        </androidx.cardview.widget.CardView>
    </RelativeLayout>




</RelativeLayout>